- Bugfix: Popup menus are now enabled for tabs on a DefaultStackDockComponent
- API: A StackDockStation with only one child can still show a tab depending on the type of StackDockComponent
- API: ScreenDockStation now supports fullscreen mode for its children. What "fullscreen" means can be influenced by a ScreenDockFullscreenStrategy.
- Bugfix: If DockRegister was stalled and a DockStation was added/removed to the register and later Dockables added/removed from that station, then the DockRegister could miss these modifications and store too many/few Dockables.
- Bugfix: CActionSource did not fire events when removing or replacing actions
- Bugfix: CLocationModeManager#setLocation(Dockable,ExtendedMode,CLocation) did not compare the correct objects and has always thrown an exception
- Bugfix: Minimized CDockables did not appear at the correct location if corner components were used
- Bugfix: Dragging a maximized CDockable could throw an exception
- Bugfix: Dragging a tab from a BasicStackDockComponent could throw an exception
- Bugfix: Path did not encode non-java identifiers right.
- API: EclipseDockableDisplayer now also respects TabContentFilter
! API: TabContentFilter has additional methods dealing with StackDockComponents. StackDockStationFilterListener renamed to TabContentFilter.
- Bugfix: EclipseMenu did not update its icon automatically
- Bugfix: StackDockStation.move(Dockable,DockableProperty) could throw exception if destination index was too big
- Bugfix: AbstractScreenDockWindow.setDockable did call updateTitleIcon instead of updateTitleText
- Bugfix: DockTitleTab caused exception when uninstalled
- Bugfix: Instead of doing nothing, PropertyPreferences now load their default value if they cannot read any other value
- Bugfix: When deploying a CGrid some Dockables did not appear: the tree of the SplitDockStation was cleaned up too early before all Dockables had been inserted, leading to a corrupted tree 